--- a/packages/client/src/pages/ForumTopicPage/TopicCommentsList/styles.module.css
+++ b/packages/client/src/pages/ForumTopicPage/TopicCommentsList/styles.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   max-height: calc(100vh - 480px);
-  overflow: scroll;
+  overflow-y: scroll;
   width: 100%;
   box-sizing: border-box;
   padding-bottom: 4px;
